# Datadelta-

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: generate_demo_data.py  metrics_logistics.yaml  metrics_saas.yaml
src/datadiff/: cli.py  differ.py  export.py  init.py  loader.py  metrics.py  metrics_generator.py  profiler.py  reporter.py  scenarios.py  story.py
